@@ -1870,13 +1870,13 @@ setup_parameters (struct cb_field *f)
 static void
 compute_binary_size (struct cb_field *f, const int size)
 {
-	if (cb_binary_size == CB_BINARY_SIZE_1_2_4_8) {
+	switch (cb_binary_size) {
+	case CB_BINARY_SIZE_1_2_4_8:
 		f->size = ((size <= 2) ? 1 :
 			   (size <= 4) ? 2 :
 			   (size <= 9) ? 4 : (size <= 18) ? 8 : 16);
 		return;
-	}
-	if (cb_binary_size == CB_BINARY_SIZE_2_4_8) {
+	case CB_BINARY_SIZE_2_4_8:
 		if (f->flag_real_binary && size <= 2) {
 			f->size = 1;
 		} else {
@@ -1884,12 +1884,80 @@ compute_binary_size (struct cb_field *f, const int size)
 				   (size <= 9) ? 4 : (size <= 18) ? 8 : 16);
 		}
 		return;
-	}
-	if (cb_binary_size != CB_BINARY_SIZE_1__8) {
-		f->size = size;
-		return;
-	}
-	if (f->pic->have_sign) {
+	case CB_BINARY_SIZE_1__8:
+		if (f->pic->have_sign) {
+			switch (size) {
+			case 0:
+			case 1:
+			case 2:
+				f->size = 1;
+				return;
+			case 3:
+			case 4:
+				f->size = 2;
+				return;
+			case 5:
+			case 6:
+				f->size = 3;
+				return;
+			case 7:
+			case 8:
+			case 9:
+				f->size = 4;
+				return;
+			case 10:
+			case 11:
+				f->size = 5;
+				return;
+			case 12:
+			case 13:
+			case 14:
+				f->size = 6;
+				return;
+			case 15:
+			case 16:
+				f->size = 7;
+				return;
+			case 17:
+			case 18:
+				f->size = 8;
+				return;
+			case 19:
+			case 20:
+			case 21:
+				f->size = 9;
+				return;
+			case 22:
+			case 23:
+				f->size = 10;
+				return;
+			case 24:
+			case 25:
+			case 26:
+				f->size = 11;
+				return;
+			case 27:
+			case 28:
+				f->size = 12;
+				return;
+			case 29:
+			case 30:
+			case 31:
+				f->size = 13;
+				return;
+			case 32:
+			case 33:
+				f->size = 14;
+				return;
+			case 34:
+			case 35:
+				f->size = 15;
+				return;
+			default:
+				f->size = 16;
+				return;
+			}
+		}
 		switch (size) {
 		case 0:
 		case 1:
@@ -1902,18 +1970,18 @@ compute_binary_size (struct cb_field *f, const int size)
 			return;
 		case 5:
 		case 6:
+		case 7:
 			f->size = 3;
 			return;
-		case 7:
 		case 8:
 		case 9:
 			f->size = 4;
 			return;
 		case 10:
 		case 11:
+		case 12:
 			f->size = 5;
 			return;
-		case 12:
 		case 13:
 		case 14:
 			f->size = 6;
@@ -1924,18 +1992,18 @@ compute_binary_size (struct cb_field *f, const int size)
 			return;
 		case 17:
 		case 18:
+		case 19:
 			f->size = 8;
 			return;
-		case 19:
 		case 20:
 		case 21:
 			f->size = 9;
 			return;
 		case 22:
 		case 23:
+		case 24:
 			f->size = 10;
 			return;
-		case 24:
 		case 25:
 		case 26:
 			f->size = 11;
@@ -1955,84 +2023,19 @@ compute_binary_size (struct cb_field *f, const int size)
 			return;
 		case 34:
 		case 35:
+		case 36:
 			f->size = 15;
 			return;
 		default:
 			f->size = 16;
 			return;
 		}
-	}
-	switch (size) {
-	case 0:
-	case 1:
-	case 2:
-		f->size = 1;
 		return;
-	case 3:
-	case 4:
-		f->size = 2;
-		return;
-	case 5:
-	case 6:
-	case 7:
-		f->size = 3;
-		return;
-	case 8:
-	case 9:
-		f->size = 4;
-		return;
-	case 10:
-	case 11:
-	case 12:
-		f->size = 5;
-		return;
-	case 13:
-	case 14:
-		f->size = 6;
-		return;
-	case 15:
-	case 16:
-		f->size = 7;
-		return;
-	case 17:
-	case 18:
-	case 19:
-		f->size = 8;
-		return;
-	case 20:
-	case 21:
-		f->size = 9;
-		return;
-	case 22:
-	case 23:
-	case 24:
-		f->size = 10;
-		return;
-	case 25:
-	case 26:
-		f->size = 11;
-		return;
-	case 27:
-	case 28:
-		f->size = 12;
-		return;
-	case 29:
-	case 30:
-	case 31:
-		f->size = 13;
-		return;
-	case 32:
-	case 33:
-		f->size = 14;
-		return;
-	case 34:
-	case 35:
-	case 36:
-		f->size = 15;
-		return;
+#if 0	/* how should this happen ... */
 	default:
-		f->size = 16;
+		f->size = size;
 		return;
+#endif
 	}
 }
 
