@@ -418,10 +418,10 @@ test.conf: missing definitions:
 	no definition of 'word-length'
 	no definition of 'literal-length'
 	no definition of 'numeric-literal-length'
-	no definition of 'assign-clause'
+	no definition of 'standard-define'
 	no definition of 'binary-size'
 	no definition of 'binary-byteorder'
-	no definition of 'standard-define'
+	no definition of 'assign-clause'
 	no definition of 'screen-section-rules'
 	no definition of 'filename-mapping'
 	no definition of 'pretty-display'
