@@ -3,6 +3,11 @@
 
 	* field.c, parser.y: verification of cb_synchronized_clause moved, only
 	  set f->flag_synchronized if actually active
+	* cobc.h, config.def: moved defines all CB_CONFIG_ANY entries to to new
+	  enums: cb_binary_size_options, cb_binary_byteorder_options,
+	  cb_assign_clause_options; used these instead of unsigned int
+	* field.c (compute_binary_size): switch over cb_binary_size
+	* typeck.c (cb_build_assignment_name): switch over cb_assign_clause
 
 2019-08-12  Simon Sobisch <simonsobisch@gnu.org>
 
